# midnight-zk

./: .gitignore  Cargo.toml
bench-macros/: Cargo.toml
circuits/: Cargo.toml
cuda-backend/: .gitignore  CMakeLists.txt  build.sh
cuda-backend/include/: bls12_381_constants.h  bls12_381_params.cuh  field.cuh  icicle_backend_api.cuh  icicle_types.cuh  msm.cuh  msm_fwd.cuh  msm_g2.cuh  ntt.cuh  point.cuh
cuda-backend/include/icicle/: device.h  device_api.h  errors.h  memory_tracker.h  runtime.h
cuda-backend/include/icicle/utils/: log.h  utils.h
cuda-backend/install/include/: bls12_381_constants.h  field.cuh  icicle_backend_api.cuh  icicle_types.cuh  msm.cuh  msm_fwd.cuh  point.cuh
cuda-backend/scripts/: icicle_install.sh
cuda-backend/src/: params.cu
cuda-backend/src/backend/: g2_registry.cu  icicle_curve_api.cu  icicle_field_api.cu
cuda-backend/src/curve/: curve_backend.cu  ecntt.cu  montgomery.cu  msm.cu  msm_kernels.cu  point_ops.cu
cuda-backend/src/device/: cuda_device_api.cu
cuda-backend/src/field/: field_backend.cu  ntt.cu  vec_ops.cu
cuda-backend/tests/: SECURITY_TESTS_README.md  security_audit_tests.cuh  test_backend.cu  test_curve_operations.cu  test_field_properties.cu  test_known_answer_vectors.cu  test_msm_security.cu  test_ntt_custom.cu  test_ntt_debug.cu  test_ntt_security.cu  test_point_ops.cu  test_roundtrip.cu  test_security_edge_cases.cu  test_vec_ops.cu  test_vectors.cu
curves/src/: lib.rs
proofs/: Cargo.toml  README.md
proofs/examples/: gpu_benchmark.rs  gpu_init.rs  plonk_msm_benchmark.rs  proof_generation_benchmark.rs
proofs/src/: gpu_accel.rs  lib.rs
proofs/src/gpu/: backend.rs  batch.rs  config.rs  mod.rs  msm.rs  ntt.rs  stream.rs  types.rs  vecops.rs
proofs/src/plonk/: keygen.rs  prover.rs
proofs/src/plonk/lookup/: prover.rs
proofs/src/plonk/permutation/: prover.rs
proofs/src/plonk/trash/: prover.rs
proofs/src/plonk/vanishing/: prover.rs
proofs/src/poly/: batch_commit.rs  commitment.rs  domain.rs  mod.rs
proofs/src/poly/kzg/: mod.rs  msm.rs  params.rs
proofs/src/utils/: fft.rs  mod.rs
proofs/tests/: async_msm_benchmark.rs  async_multi_msm_benchmark.rs  batch_msm_integration.rs  batch_test.rs  e2e_proof_benchmark.rs  gpu_integration.rs  gpu_msm_benchmark.rs  kzg_batch_commit_benchmark.rs  msm_blst_detection.rs  plonk_api.rs  production_profiling.rs
